--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ window.Quarto = {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(2)</span></div><div class="category" data-category="YW5hbHlzaXM=">analysis <span class="quarto-category-count">(1)</span></div><div class="category" data-category="Y29kZQ==">code <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bmV3cw==">news <span class="quarto-category-count">(2)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(1)</span></div><div class="category" data-category="YmFza2V0YmFsbA==">basketball <span class="quarto-category-count">(1)</span></div><div class="category" data-category="ZmluYWxz">finals <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bmJh">nba <span class="quarto-category-count">(1)</span></div><div class="category" data-category="cGxheW9mZnM=">playoffs <span class="quarto-category-count">(1)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -200,74 +200,44 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="bmV3cyUyQ2NvZGUlMkNhbmFseXNpcw==" data-listing-date-sort="1743397200000" data-listing-file-modified-sort="1743446283697" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="9">
+<div class="quarto-post image-right" data-index="0" data-categories="YmFza2V0YmFsbCUyQ25iYSUyQ3BsYXlvZmZzJTJDZmluYWxz" data-listing-date-sort="1744606800000" data-listing-file-modified-sort="1744667131810" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="8" data-listing-word-count-sort="1561">
 <div class="thumbnail">
-<p><a href="./posts/post-with-code/index.html" class="no-external"></a></p><a href="./posts/post-with-code/index.html" class="no-external">
-<p><img loading="lazy" src="./posts/post-with-code/image.jpg" class="thumbnail-image"></p>
-</a><p><a href="./posts/post-with-code/index.html" class="no-external"></a></p>
+<p><a href="./posts/the-biggest-playoff-risers-in-the-modern-era/index.html" class="no-external"></a></p><a href="./posts/the-biggest-playoff-risers-in-the-modern-era/index.html" class="no-external">
+<p><img loading="lazy" src="./posts/the-biggest-playoff-risers-in-the-modern-era/image.png" class="thumbnail-image"></p>
+</a><p><a href="./posts/the-biggest-playoff-risers-in-the-modern-era/index.html" class="no-external"></a></p>
 </div>
 <div class="body">
 <h3 class="no-anchor listing-title">
-<a href="./posts/post-with-code/index.html" class="no-external">Post With Code</a>
+<a href="./posts/the-biggest-playoff-risers-in-the-modern-era/index.html" class="no-external">The Biggest Playoff Risers in the NBAs Modern Era</a>
 </h3>
 <div class="listing-subtitle">
-<a href="./posts/post-with-code/index.html" class="no-external"></a>
+<a href="./posts/the-biggest-playoff-risers-in-the-modern-era/index.html" class="no-external"></a>
 </div>
 <div class="listing-categories">
-<div class="listing-category" onclick="window.quartoListingCategory('bmV3cw=='); return false;">
-news
+<div class="listing-category" onclick="window.quartoListingCategory('YmFza2V0YmFsbA=='); return false;">
+basketball
 </div>
-<div class="listing-category" onclick="window.quartoListingCategory('Y29kZQ=='); return false;">
-code
+<div class="listing-category" onclick="window.quartoListingCategory('bmJh'); return false;">
+nba
 </div>
-<div class="listing-category" onclick="window.quartoListingCategory('YW5hbHlzaXM='); return false;">
-analysis
+<div class="listing-category" onclick="window.quartoListingCategory('cGxheW9mZnM='); return false;">
+playoffs
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('ZmluYWxz'); return false;">
+finals
 </div>
 </div>
 <div class="listing-description">
-<a href="./posts/post-with-code/index.html" class="no-external">This is a post with executable code.</a>
+<a href="./posts/the-biggest-playoff-risers-in-the-modern-era/index.html" class="no-external">The NBA playoffs are approaching, and ring culture in the NBA has changed the way fans and players look at the game. “72-10 don’t mean a thing without the ring,” is the…</a>
 </div>
 </div>
 <div class="metadata">
-<a href="./posts/post-with-code/index.html" class="no-external">
+<a href="./posts/the-biggest-playoff-risers-in-the-modern-era/index.html" class="no-external">
 <div class="listing-date">
-Mar 31, 2025
+Apr 14, 2025
 </div>
 <div class="listing-author">
-Harlow Malloc
-</div>
-</a>
-</div>
-</div>
-<div class="quarto-post image-right" data-index="1" data-categories="bmV3cw==" data-listing-date-sort="1743138000000" data-listing-file-modified-sort="1743446283694" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="1" data-listing-word-count-sort="32">
-<div class="thumbnail">
-<p><a href="./posts/welcome/index.html" class="no-external"></a></p><a href="./posts/welcome/index.html" class="no-external">
-<p class="card-img-top"><img src="posts/welcome/thumbnail.jpg"  class="thumbnail-image card-img"/></p>
-</a><p><a href="./posts/welcome/index.html" class="no-external"></a></p>
-</div>
-<div class="body">
-<h3 class="no-anchor listing-title">
-<a href="./posts/welcome/index.html" class="no-external">Welcome To My Blog</a>
-</h3>
-<div class="listing-subtitle">
-<a href="./posts/welcome/index.html" class="no-external"></a>
-</div>
-<div class="listing-categories">
-<div class="listing-category" onclick="window.quartoListingCategory('bmV3cw=='); return false;">
-news
-</div>
-</div>
-<div class="listing-description">
-<a href="./posts/welcome/index.html" class="no-external">This is the first post in a Quarto blog. Welcome!</a>
-</div>
-</div>
-<div class="metadata">
-<a href="./posts/welcome/index.html" class="no-external">
-<div class="listing-date">
-Mar 28, 2025
-</div>
-<div class="listing-author">
-Tristan O’Malley
+Nolan Rachiele
 </div>
 </a>
 </div>
