--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="YmFza2V0YmFsbCUyQ25iYSUyQ3BsYXlvZmZzJTJDZmluYWxz" data-listing-date-sort="1744606800000" data-listing-file-modified-sort="1744691668659" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="8" data-listing-word-count-sort="1576">
+<div class="quarto-post image-right" data-index="0" data-categories="YmFza2V0YmFsbCUyQ25iYSUyQ3BsYXlvZmZzJTJDZmluYWxz" data-listing-date-sort="1744606800000" data-listing-file-modified-sort="1744692336094" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="8" data-listing-word-count-sort="1591">
 <div class="thumbnail">
 <p><a href="./posts/the-biggest-playoff-risers-in-the-modern-era/index.html" class="no-external"></a></p><a href="./posts/the-biggest-playoff-risers-in-the-modern-era/index.html" class="no-external">
 <p><img loading="lazy" src="./posts/the-biggest-playoff-risers-in-the-modern-era/image.png" class="thumbnail-image"></p>
@@ -228,7 +228,7 @@ finals
 </div>
 </div>
 <div class="listing-description">
-<a href="./posts/the-biggest-playoff-risers-in-the-modern-era/index.html" class="no-external">The NBA playoffs are approaching. Ring culture in the NBA has changed the way fans and players look at the game. “72-10 don’t mean a thing without the ring,” is the famous…</a>
+<a href="./posts/the-biggest-playoff-risers-in-the-modern-era/index.html" class="no-external">The NBA playoffs are approaching. Ring culture in the NBA has changed the way fans and players look at the game. “72-10 don’t mean a thing without the ring” is the famous…</a>
 </div>
 </div>
 <div class="metadata">
