--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ window.Quarto = {
 <!-- margin-sidebar -->
     <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
         
-    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(1)</span></div><div class="category" data-category="YmFza2V0YmFsbA==">basketball <span class="quarto-category-count">(1)</span></div><div class="category" data-category="ZmluYWxz">finals <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bmJh">nba <span class="quarto-category-count">(1)</span></div><div class="category" data-category="cGxheW9mZnM=">playoffs <span class="quarto-category-count">(1)</span></div></div></div>
+    <h5 class="quarto-listing-category-title">Categories</h5><div class="quarto-listing-category category-default"><div class="category" data-category="">All <span class="quarto-category-count">(3)</span></div><div class="category" data-category="YmFza2V0YmFsbA==">basketball <span class="quarto-category-count">(3)</span></div><div class="category" data-category="ZmluYWxz">finals <span class="quarto-category-count">(3)</span></div><div class="category" data-category="a29iZQ==">kobe <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bXZw">mvp <span class="quarto-category-count">(1)</span></div><div class="category" data-category="bmJh">nba <span class="quarto-category-count">(3)</span></div><div class="category" data-category="cGxheW9mZnM=">playoffs <span class="quarto-category-count">(3)</span></div><div class="category" data-category="c2hhcQ==">shaq <span class="quarto-category-count">(1)</span></div><div class="category" data-category="c3RldmUlMjBuYXNo">steve nash <span class="quarto-category-count">(1)</span></div></div></div>
 <!-- main -->
 <main class="content quarto-banner-title-block column-page-left" id="quarto-document-content">
 
@@ -200,7 +200,103 @@ window.Quarto = {
 
 <div class="quarto-listing quarto-listing-container-default" id="listing-listing">
 <div class="list quarto-listing-default">
-<div class="quarto-post image-right" data-index="0" data-categories="YmFza2V0YmFsbCUyQ25iYSUyQ3BsYXlvZmZzJTJDZmluYWxz" data-listing-date-sort="1744606800000" data-listing-file-modified-sort="1744692336094" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="8" data-listing-word-count-sort="1591">
+<div class="quarto-post image-right" data-index="0" data-categories="YmFza2V0YmFsbCUyQ25iYSUyQ3BsYXlvZmZzJTJDZmluYWxzJTJDbXZwJTJDc3RldmUlMjBuYXNoJTJDc2hhcSUyQ2tvYmU=" data-listing-date-sort="1746334800000" data-listing-file-modified-sort="1746220563124" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="9" data-listing-word-count-sort="1695">
+<div class="thumbnail">
+<p><a href="./posts/steve-nashs-2005-mvp/index.html" class="no-external"></a></p><a href="./posts/steve-nashs-2005-mvp/index.html" class="no-external">
+<p><img loading="lazy" src="./posts/steve-nashs-2005-mvp/image.png" class="thumbnail-image"></p>
+</a><p><a href="./posts/steve-nashs-2005-mvp/index.html" class="no-external"></a></p>
+</div>
+<div class="body">
+<h3 class="no-anchor listing-title">
+<a href="./posts/steve-nashs-2005-mvp/index.html" class="no-external">Does Steve Nash Deserve His 2005 MVP</a>
+</h3>
+<div class="listing-subtitle">
+<a href="./posts/steve-nashs-2005-mvp/index.html" class="no-external"></a>
+</div>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('YmFza2V0YmFsbA=='); return false;">
+basketball
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('bmJh'); return false;">
+nba
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('cGxheW9mZnM='); return false;">
+playoffs
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('ZmluYWxz'); return false;">
+finals
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('bXZw'); return false;">
+mvp
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('c3RldmUlMjBuYXNo'); return false;">
+steve nash
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('c2hhcQ=='); return false;">
+shaq
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('a29iZQ=='); return false;">
+kobe
+</div>
+</div>
+<div class="listing-description">
+<a href="./posts/steve-nashs-2005-mvp/index.html" class="no-external">Steve Nash is often discredited and disrespected by his NBA peers and fans of the league. Fans overlooked Nash until he was 30 and joined the Phoenix Suns, where he…</a>
+</div>
+</div>
+<div class="metadata">
+<a href="./posts/steve-nashs-2005-mvp/index.html" class="no-external">
+<div class="listing-date">
+May 4, 2025
+</div>
+<div class="listing-author">
+Nolan Rachiele
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="1" data-categories="YmFza2V0YmFsbCUyQ25iYSUyQ3BsYXlvZmZzJTJDZmluYWxz" data-listing-date-sort="1744606800000" data-listing-file-modified-sort="1744692391194" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="8" data-listing-word-count-sort="1589">
+<div class="thumbnail">
+<p><a href="./posts/the-biggest-playoff-risers-in-the-modern-era/index.html" class="no-external"></a></p><a href="./posts/the-biggest-playoff-risers-in-the-modern-era/index.html" class="no-external">
+<p><img loading="lazy" src="./posts/the-biggest-playoff-risers-in-the-modern-era/image.png" class="thumbnail-image"></p>
+</a><p><a href="./posts/the-biggest-playoff-risers-in-the-modern-era/index.html" class="no-external"></a></p>
+</div>
+<div class="body">
+<h3 class="no-anchor listing-title">
+<a href="./posts/the-biggest-playoff-risers-in-the-modern-era/index.html" class="no-external">The Biggest Playoff Risers in the NBAs Modern Era</a>
+</h3>
+<div class="listing-subtitle">
+<a href="./posts/the-biggest-playoff-risers-in-the-modern-era/index.html" class="no-external"></a>
+</div>
+<div class="listing-categories">
+<div class="listing-category" onclick="window.quartoListingCategory('YmFza2V0YmFsbA=='); return false;">
+basketball
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('bmJh'); return false;">
+nba
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('cGxheW9mZnM='); return false;">
+playoffs
+</div>
+<div class="listing-category" onclick="window.quartoListingCategory('ZmluYWxz'); return false;">
+finals
+</div>
+</div>
+<div class="listing-description">
+<a href="./posts/the-biggest-playoff-risers-in-the-modern-era/index.html" class="no-external">The NBA playoffs are approaching. Ring culture in the NBA has changed the way fans and players look at the game. “72-10 don’t mean a thing without the ring” is the famous…</a>
+</div>
+</div>
+<div class="metadata">
+<a href="./posts/the-biggest-playoff-risers-in-the-modern-era/index.html" class="no-external">
+<div class="listing-date">
+Apr 14, 2025
+</div>
+<div class="listing-author">
+Nolan Rachiele
+</div>
+</a>
+</div>
+</div>
+<div class="quarto-post image-right" data-index="2" data-categories="YmFza2V0YmFsbCUyQ25iYSUyQ3BsYXlvZmZzJTJDZmluYWxz" data-listing-date-sort="1744606800000" data-listing-file-modified-sort="1744692391779" data-listing-date-modified-sort="NaN" data-listing-reading-time-sort="8" data-listing-word-count-sort="1589">
 <div class="thumbnail">
 <p><a href="./posts/the-biggest-playoff-risers-in-the-modern-era/index.html" class="no-external"></a></p><a href="./posts/the-biggest-playoff-risers-in-the-modern-era/index.html" class="no-external">
 <p><img loading="lazy" src="./posts/the-biggest-playoff-risers-in-the-modern-era/image.png" class="thumbnail-image"></p>
